<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="horizontal" 
	android:gravity="center_vertical|center_horizontal"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
	
    <LinearLayout android:gravity="center_horizontal" 
    	android:orientation="horizontal" 
    	android:layout_width="0dip" 
    	android:layout_height="match_parent" 
    	android:layout_weight="1">		    
        <TextView android:id="@+id/hours" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	style="@style/timer_setup_digit"
        	android:textColor="@color/magcomm_time_text_color"       	
        	android:singleLine="true" />
        <TextView  android:id="@+id/hours_label"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
			style="@style/label" 
        	android:textColor="@color/magcomm_time_text_color" 
        	android:text="@string/hours_label" 
        	android:singleLine="true" />
    </LinearLayout>
    
    <TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="match_parent" 
    	android:layout_marginBottom="5.0dip"
    	style="@style/timer_setup_digit"
    	android:textColor="@color/magcomm_time_text_color"
    	android:text="@string/timer_time_colon" 
    	android:singleLine="true" />
    
    <LinearLayout android:gravity="center_horizontal" 
    	android:orientation="horizontal"    
    	android:layout_width="0.0dip" 
    	android:layout_height="match_parent" 
    	android:layout_weight="1.0">
        <TextView android:id="@+id/minutes" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	style="@style/timer_setup_digit"
        	android:textColor="@color/magcomm_time_text_color" 
        	android:singleLine="true" />
        <TextView  android:id="@+id/minutes_label" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	style="@style/label"  
        	android:textColor="@color/magcomm_time_text_color"
        	android:text="@string/minutes_label"
        	android:singleLine="true" />
    </LinearLayout>
    
    <TextView  android:layout_width="wrap_content" 
    	android:layout_height="match_parent" 
    	android:layout_marginBottom="5.0dip" 
    	style="@style/timer_setup_digit"
    	android:textColor="@color/magcomm_time_seconds_color"
    	android:text="@string/timer_time_colon" 
    	android:singleLine="true" />
    
    <LinearLayout android:gravity="center_horizontal" 
    	android:orientation="horizontal"    
    	android:layout_width="0dip" 
    	android:layout_height="match_parent" 
    	android:layout_weight="1">
        <TextView  android:id="@+id/seconds" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:textColor="@color/magcomm_time_seconds_color"
        	style="@style/timer_setup_digit"
        	android:singleLine="true" />
        <TextView  android:id="@+id/seconds_label"      	 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/seconds_label"
        	style="@style/label" 
        	android:textColor="@color/magcomm_time_seconds_color" 
        	android:singleLine="true" />
    </LinearLayout>
</LinearLayout>  