<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:careos="http://schemas.android.com/apk/prv/res/com.cappu"
    android:orientation="vertical" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="#eee">
    
    <!--<include layout="@layout/magcomm_topbar"/>-->
    <com.cappu.widget.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        careos:text="@string/magcomm_alarm_edit"
        careos:rightVisibility="invisible"
        careos:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
      	android:layout_weight="1.0" 
      	android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center" 
        android:gravity="center"    
        android:orientation="horizontal">
        <com.android.deskclock.wheel.WheelView 
	    	android:id="@+id/hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" /> 
		<com.android.deskclock.wheel.WheelView 
	    	android:id="@+id/minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/> 
     </LinearLayout>

 	<View
       android:layout_height="1dp"
       android:layout_width="match_parent"
       android:layout_marginLeft="@dimen/alarm_edit_margin" 
       android:layout_marginRight="@dimen/alarm_edit_margin"
       android:background="@drawable/magcomm_ic_line" 
       android:layout_gravity="bottom" />
	<LinearLayout
      	android:layout_width="match_parent"
      	android:layout_height="0dp"
      	android:layout_weight="1.0"
      	android:layout_marginLeft="@dimen/alarm_edit_margin" 
        android:layout_marginRight="@dimen/alarm_edit_margin"
      	android:orientation="vertical" >
 		<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="0dip"
        	android:layout_weight="1"
        	android:layout_marginLeft="@dimen/alarm_edit_margin" 
            android:layout_marginRight="@dimen/alarm_edit_margin">
        	<TextView
                android:id="@+id/repeat_onoff"
                android:text="@string/alarm_repeat"
                android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="1"
                android:layout_gravity="center_vertical|left"
                android:textSize="26sp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/magcomm_alarm_time_text_color"/>
            <LinearLayout
                android:id="@+id/repeat_days"
                android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:orientation="horizontal">
            </LinearLayout>
 		</LinearLayout>
    	<View
       		android:layout_height="1dp"
       		android:layout_width="match_parent"
       		android:background="@drawable/magcomm_ic_line" 
       		android:layout_gravity="bottom" />
     	<LinearLayout
     	    android:id="@+id/ringtone"
        	android:layout_width="match_parent"
        	android:layout_height="0dip"
        	android:layout_weight="1"
        	android:layout_marginLeft="@dimen/alarm_edit_margin" 
            android:layout_marginRight="@dimen/alarm_edit_margin">
            <TextView 
            	android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="1"
            	android:text="@string/ringtone"              
            	android:textColor="@color/magcomm_alarm_time_text_color"
            	android:fontFamily="sans-serif-thin"
            	android:textSize="26sp"
            	android:ellipsize="end"
            	android:baselineAligned="true"
            	android:layout_gravity="center_vertical|left"
            	android:singleLine="true" />
    		<TextView
				android:id="@+id/choose_ringtone"
				android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="2"
				android:layout_gravity="center_vertical"
            	android:gravity="right"
				android:textSize="26sp"
				android:fontFamily="sans-serif-thin"
				android:textColor="@color/magcomm_alarm_text_color_normal"
				android:ellipsize="marquee"
				android:singleLine="true"/>
    	</LinearLayout>
    	<View
       		android:layout_height="1dp"
       		android:layout_width="match_parent"
       		android:background="@drawable/magcomm_ic_line" 
       		android:layout_gravity="bottom" />
     	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="0dip"
        	android:layout_weight="1"
        	android:layout_marginLeft="@dimen/alarm_edit_margin" 
            android:layout_marginRight="@dimen/alarm_edit_margin">
    		<TextView 
            	android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="1" 
            	android:text="@string/alarm_vibrate"              
            	android:textColor="@color/magcomm_alarm_time_text_color"
            	android:fontFamily="sans-serif-thin"
            	android:textSize="26sp"
            	android:ellipsize="end"
            	android:baselineAligned="true"
            	android:layout_gravity="center_vertical|left"
            	android:singleLine="true" />
    		<Switch
    	    	android:id="@+id/vibrate_onoff"
            	android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="1"
            	android:layout_gravity="center_vertical"
            	android:gravity="right"
            	android:theme="@style/AlarmSwitchTheme"/>
		</LinearLayout>
    	<View
       		android:layout_height="1dp"
       		android:layout_width="match_parent"
       		android:background="@drawable/magcomm_ic_line" 
       		android:layout_gravity="bottom" />
     	<LinearLayout
     	    android:id="@+id/label"
        	android:layout_width="match_parent"
        	android:layout_height="0dip"
        	android:layout_weight="1"
        	android:layout_marginLeft="@dimen/alarm_edit_margin" 
            android:layout_marginRight="@dimen/alarm_edit_margin" >
			<TextView 
            	android:layout_width="0dip"
            	android:layout_height="wrap_content" 
            	android:layout_weight="1"
            	android:text="@string/label"              
            	android:textColor="@color/magcomm_alarm_time_text_color"
            	android:fontFamily="sans-serif-thin"
            	android:textSize="26sp"
            	android:ellipsize="end"
            	android:baselineAligned="true"
            	android:layout_gravity="center_vertical|left"
            	android:singleLine="true" />
			<TextView
				android:id="@+id/edit_label"            
				android:textColor="@color/magcomm_alarm_text_color_normal"
				android:hint="@string/get_up"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ellipsize="end"
				android:textSize="26sp"
				android:fontFamily="sans-serif-thin"
				android:layout_gravity="center_vertical|right"
				android:gravity="right"
				android:singleLine="true"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout	
			android:layout_width="match_parent"
			android:layout_height="@dimen/footer_button_size"
        	android:background="@drawable/magcomm_ic_bg" 
        	android:layout_gravity="bottom"
			android:orientation="horizontal">
			<com.cappu.widget.CareButton
				android:id="@+id/delete_alarm"
				android:text="@string/magcomm_delete_alarm"
				style="@style/MagcommButton"/>
			<View
                android:id="@+id/divid_view"
				android:layout_width="1px"
				android:layout_height="wrap_content"
				android:background="@drawable/magcomm_add_clock_devide"/>
			<com.cappu.widget.CareButton
				android:id="@+id/save_alarm"
				android:text="@string/save"
				style="@style/MagcommButton"/>
	</LinearLayout>
</LinearLayout>
