<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:careos="http://schemas.android.com/apk/prv/res/com.cappu"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- del by yzs 20151119  
	<View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="12dp"    
         android:layout_marginRight="12dp" 
         android:layout_gravity="top"
         android:background="@drawable/magcomm_ic_line" />-->

    <com.cappu.widget.TopBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        careos:text="@string/menu_alarm"
        careos:leftVisibility="gone"
        careos:rightVisibility="gone"
        careos:textSize="28sp" />

    <ListView
        android:id="@+id/alarms_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/footer_button_size"
        android:paddingBottom="@dimen/button_footer_height"
        android:clipToPadding="false"
        android:descendantFocusability="beforeDescendants"
        android:divider="@null"
        android:dividerHeight="0dip"
        />

    <TextView
        android:id="@+id/alarms_empty_view"
        style="@style/no_alarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/no_alarms"
        android:drawableTop="@drawable/ic_noalarms"
        android:gravity="center"
        android:text="@string/no_alarms"
        android:textColor="@color/black"
        android:paddingBottom="88dp"
        android:visibility="gone"  />

    <FrameLayout android:id="@+id/undo_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >
        <com.android.deskclock.widget.ActionableToastBar
            android:id="@+id/undo_bar"
            android:layout_width="match_parent"
            android:layout_height="64dip"
            android:layout_gravity="bottom"
            android:layout_marginBottom="96dp"
            android:layout_marginLeft="@dimen/alarm_undo_bar_horizontal_margin"
            android:layout_marginStart="@dimen/alarm_undo_bar_horizontal_margin"
            android:layout_marginRight="@dimen/alarm_undo_bar_horizontal_margin"
            android:layout_marginEnd="@dimen/alarm_undo_bar_horizontal_margin"
            style="@style/ToastBarStyle" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/alarms_footer_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_button_size"
        android:layout_gravity="bottom">

          <LinearLayout	
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">
			<com.cappu.widget.CareButton
				android:id="@+id/alarm_add_alarm"
				android:text="@string/add_alarm"
				style="@style/MagcommButton"/>
			<View
				android:layout_width="1px"
				android:layout_height="wrap_content"
				android:background="@drawable/magcomm_add_clock_devide"/>
			<com.cappu.widget.CareButton
				android:id="@+id/menu_button"
				android:text="@string/settings"
				style="@style/MagcommButton"/>
		</LinearLayout>
    </FrameLayout>
</FrameLayout>
