<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <FrameLayout
       	android:id="@+id/alarm_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="@drawable/magcomm_pond1"
       >
    </FrameLayout>
	<RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
    	<LinearLayout
        	android:id="@+id/alert_Title"
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:orientation="vertical"
        	android:layout_marginTop="@dimen/alarm_alert_title_top"
        	android:layout_centerHorizontal="true"
        	android:layout_alignParentTop="true" >

        <TextView android:id="@+id/title"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/header_not_caps"
            android:paddingLeft="@dimen/label_margin_big"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="-20dp"
            android:textSize="@dimen/alarms_font_size"
        	android:fontFamily="sans-serif-thin"
            android:textColor="@color/clock_white"
            android:shadowColor="@color/black"
      		android:shadowDx="1.0"
        	android:shadowDy="1.0"
        	android:shadowRadius="1.0"
        	android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextClock
            android:id="@+id/digital_clock"
            android:format12Hour="@string/main_clock_12_hours_format"
            android:format24Hour="@string/clock_24_hours_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingBottom="24dp"
            android:baselineAligned="true"
            android:singleLine="true"
            android:ellipsize="none"
            android:textSize="@dimen/alarm_alert_font_size"
        	android:fontFamily="sans-serif-thin"
            android:textColor="@color/clock_white"
            android:shadowColor="@color/black"
      		android:shadowDx="1.0"
        	android:shadowDy="1.0"
        	android:shadowRadius="1.0"/>    		
    </LinearLayout>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
		android:layout_marginTop="@dimen/alarm_alert_snooze_top"
        android:gravity="center">
    		<ImageView
		         android:id="@+id/alarm_anim"
		         android:layout_width="60dp"
		         android:layout_height="60dp"
		         android:gravity="center"
		         android:src="@drawable/magcomm_ic_alarm_alert" />
    		<TextView         
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/alarm_snooze_tap"
                android:textSize="20sp"
        		android:fontFamily="sans-serif-thin"
            	android:textColor="@color/clock_white"
            	android:shadowColor="@color/black"
      			android:shadowDx="1.0"
        		android:shadowDy="1.0"
        		android:shadowRadius="1.0"
                />
    </LinearLayout>	

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">
	
	 	<Button
	     	android:id="@+id/snooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
	     	android:layout_marginLeft="40dp"
        	android:layout_marginBottom="10dp"
            android:text="@string/alarm_snooze"
            android:textSize="30sp"
	     	android:background="@drawable/magcomm_ic_alarm_alert_bg"
	     	android:visibility="gone"/>
		<Button
	     	android:id="@+id/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="80dp"
	     	android:layout_marginLeft="80dp"
	     	android:layout_marginBottom="20dp"
            android:text="@string/alarm_dismiss"
            android:textSize="30sp"
            android:textColor="@color/magcomm_alarm_label_text_color"
            android:fontFamily="sans-serif-thin"
	     	android:background="@drawable/magcomm_ic_alarm_alert_bg"/>
    </LinearLayout>

	</RelativeLayout>
</FrameLayout>
